--- a/Source/ModelViewer/ModelViewer.csproj
+++ b/Source/ModelViewer/ModelViewer.csproj
@@ -82,6 +82,12 @@
     <Compile Include="Namer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SourceView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SourceView.Designer.cs">
+      <DependentUpon>SourceView.cs</DependentUpon>
+    </Compile>
     <Compile Include="TreeSkeleton.cs" />
     <Compile Include="VccProvider.cs" />
     <EmbeddedResource Include="Main.resx">
@@ -97,6 +103,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SourceView.resx">
+      <DependentUpon>SourceView.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
