Move name-quoting (already for SMT2 not SMT1) into a seprate class

--- a/Source/Provers/SMTLib/SMTLib.csproj
+++ b/Source/Provers/SMTLib/SMTLib.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="ProverInterface.cs" />
     <Compile Include="SMTLibLineariser.cs" />
+    <Compile Include="SMTLibNamer.cs" />
     <Compile Include="TypeDeclCollector.cs" />
     <Compile Include="..\..\version.cs" />
   </ItemGroup>
