Make it possible to run Z3 on pipe; use generic PROVER_LOG options

--- a/Source/Provers/SMTLib/SMTLib.csproj
+++ b/Source/Provers/SMTLib/SMTLib.csproj
@@ -114,6 +114,7 @@
     <Compile Include="SMTLibProcess.cs" />
     <Compile Include="TypeDeclCollector.cs" />
     <Compile Include="..\..\version.cs" />
+    <Compile Include="Z3.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\AIFramework\AIFramework.csproj">
