--- a/Source/Provers/SMTLib/SMTLib.csproj
+++ b/Source/Provers/SMTLib/SMTLib.csproj
@@ -107,6 +107,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SMTLibProverOptions.cs" />
     <Compile Include="ProverInterface.cs" />
     <Compile Include="SExpr.cs" />
     <Compile Include="SMTLibLineariser.cs" />
