--- a/.hgignore
+++ b/.hgignore
@@ -1,11 +1,13 @@
 syntax: regexp
 ^Source/t$
 ^Source/_ReSharper\.Boogie$
-^(Source|BCT)/.*\.(user|suo|cache)$
+^(Source|BCT|Jennisys)/.*\.(user|suo|cache)$
+^Source/(Core|Dafny)/(Parser|Scanner).cs.old$
 ^Binaries/.*\.(dll|pdb|exe|manifest|config)$
 ^.*(bin|obj)/([^/]*/)?(Debug|Release)/.*$
 ^Binaries/BytecodeTranslator$
 ^BCT/Binaries/.*$
 Test/([^/]*)/Output
 Test/([^/]*)/([^/]*)\.sx
-Test/VSComp2010/out\.cs
+Test/(dafny0|dafny1|VSI-Benchmarks|vacid0|VSComp2010)/out\.cs
+^.*~$
