Add a method to the Sink that is responsible for creating a Boogie expression representing the default value for a type. All clients that need to create a default value should use this.

--- a/.hgignore
+++ b/.hgignore
@@ -4,7 +4,7 @@ syntax: regexp
 ^(Source|BCT|Jennisys)/.*\.(user|suo|cache)$
 ^Source/(Core|Dafny)/(Parser|Scanner).cs.old$
 ^Binaries/.*\.(dll|pdb|exe|manifest|config)$
-^.*(bin|obj)/([^/]*/)?(Debug|Release|Checked)/.*$
+^.*(bin|obj)/([^/]*/)?(Debug|Release|Checked|Debug All|DEBUG ALL)/.*$
 ^Binaries/BytecodeTranslator$
 ^BCT/Binaries/.*$
 Test/([^/]*)/Output
