--- a/.hgignore
+++ b/.hgignore
@@ -14,3 +14,5 @@ Test/(dafny0|dafny1|VSI-Benchmarks|vacid0|VSComp2010)/out\.cs
 syntax: glob
 BCT/TestResults/
 BCT/testimpactdata.sdf
+backup.diff
+BCT/Samples/CodeCounter/console/ClassDiagram1.cd
