--- a/.hgignore
+++ b/.hgignore
@@ -8,6 +8,7 @@ syntax: regexp
 ^Binaries/BytecodeTranslator$
 ^BCT/Binaries/.*$
 ^Chalice/bin/
+^Chalice/tests/(examples|permission-model|refinements)/.*\.bpl
 Test/([^/]*)/Output
 Test/([^/]*)/([^/]*)\.sx
 Test/(dafny0|dafny1|VSI-Benchmarks|vacid0|VSComp2010)/(out\.cs|.*\.dll|.*\.pdb|.*\.exe)
@@ -18,3 +19,4 @@ BCT/TestResults/
 BCT/testimpactdata.sdf
 backup.diff
 BCT/Samples/CodeCounter/console/ClassDiagram1.cd
+Chalice/makestamp
