Jennisys: added Jennesys/Jennesys/examples/bak to hgignore

--- a/.hgignore
+++ b/.hgignore
@@ -20,3 +20,4 @@ BCT/testimpactdata.sdf
 backup.diff
 BCT/Samples/CodeCounter/console/ClassDiagram1.cd
 Chalice/makestamp
+Jennisys/Jennisys/examples/bak
