Chalice: Added a script gathering all files necessary and/or of interest for a Chalice release.

--- a/.hgignore
+++ b/.hgignore
@@ -22,3 +22,4 @@ Jennisys/Jennisys/examples/bak
 Chalice/project/boot
 Chalice/project/target
 Chalice/target
+Chalice/scripts/create_release/release
