Boogie: Added new abstract interpretation harness, which uses native Boogie Expr's, not the more abstract AIExpr's. Boogie: Added Trivial Domain (/infer:t), which just detects assume/assert false. Boogie: Added new Interval Domain (/infer:j), which is stronger than the /infer:i intervals (because the also include preconditions, booleans, and more constraints) and may also be more efficient than previous intervals Boogie: Mark all inferred conditions with attribute {:inferred}

--- a/Source/AbsInt/AbsInt.csproj
+++ b/Source/AbsInt/AbsInt.csproj
@@ -147,12 +147,16 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbstractInterpretation.cs" />
     <Compile Include="ExprFactories.cs" />
+    <Compile Include="IntervalDomain.cs" />
     <Compile Include="LoopInvariantsOnDemand.cs" />
+    <Compile Include="TrivialDomain.cs" />
+    <Compile Include="NativeLattice.cs" />
     <Compile Include="Traverse.cs" />
     <Compile Include="..\version.cs" />
   </ItemGroup>
