--- a/.hgignore
+++ b/.hgignore
@@ -7,7 +7,7 @@ syntax: regexp
 ^.*(bin|obj)/([^/]*/)?(Debug|Release|Checked|Debug All|DEBUG ALL)/.*$
 ^Binaries/BytecodeTranslator$
 ^BCT/Binaries/.*$
-^Chalice/tests/(examples|permission-model|refinements|general-tests|regressions)/.*\.bpl
+^Chalice/tests/(examples|permission-model|refinements|general-tests|regressions|predicates)/.*\.bpl
 Test/([^/]*)/Output
 Test/([^/]*)/([^/]*)\.sx
 Test/(dafny0|dafny1|VSI-Benchmarks|vacid0|VSComp2010)/(out\.cs|.*\.dll|.*\.pdb|.*\.exe)
